--- a/bailing_foley/index.html
+++ b/bailing_foley/index.html
@@ -79,34 +79,34 @@
                 <h3>Group 1 - Anime</h3>
             </div>
             <div class="row">
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/anime_1.mp4">
                 </video>
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/anime_2.mp4">
                 </video>
             </div>
             <div class="row">
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/anime_3.mp4">
                 </video>
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/anime_4.mp4">
                 </video>
             </div>
             <div class="row">
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/anime_5.mp4">
                 </video>
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/anime_6.mp4">
                 </video>
             </div>
             <!--<div class="row">
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/anime_7.mp4">
                 </video>
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/anime_8.mp4">
                 </video>
             </div>-->
@@ -115,34 +115,34 @@
                 <h3>Group 2 - AI Generated</h3>
             </div>
             <div class="row">
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/generated_6.mp4">
                 </video>
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/generated_2.mp4">
                 </video>
             </div>
             <div class="row">
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/generated_3.mp4">
                 </video>
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/generated_4.mp4">
                 </video>
             </div>
             <div class="row">
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/generated_5.mp4">
                 </video>
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/generated_1.mp4">
                 </video>
             </div>
             <!--<div class="row">
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/generated_7.mp4">
                 </video>
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/generated_8.mp4">
                 </video>
             </div>-->
@@ -151,34 +151,34 @@
                 <h3>Group 3 - Game</h3>
             </div>
             <div class="row">
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/game_1.mp4">
                 </video>
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/game_2.mp4">
                 </video>
             </div>
             <div class="row">
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/game_3.mp4">
                 </video>
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/game_4.mp4">
                 </video>
             </div>
             <div class="row">
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/game_5.mp4">
                 </video>
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/game_6.mp4">
                 </video>
             </div>
             <div class="row">
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/game_7.mp4">
                 </video>
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/game_8.mp4">
                 </video>
             </div>
@@ -187,98 +187,98 @@
                 <h3>Group 4 - Real World</h3>
             </div>
             <div class="row">
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/real_1.mp4">
                 </video>
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/real_2.mp4">
                 </video>
             </div>
             <div class="row">
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/real_22.mp4">
                 </video>
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/real_4.mp4">
                 </video>
             </div>
             <div class="row">
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/real_5.mp4">
                 </video>
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/real_6.mp4">
                 </video>
             </div>
             <div class="row">
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/real_7.mp4">
                 </video>
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/real_8.mp4">
                 </video>
             </div>
             <div class="row">
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/real_9.mp4">
                 </video>
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/real_10.mp4">
                 </video>
             </div>
             <div class="row">
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/real_11.mp4">
                 </video>
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/real_12.mp4">
                 </video>
             </div>
             <div class="row">
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/real_13.mp4">
                 </video>
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/real_14.mp4">
                 </video>
             </div>
             <div class="row">
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/real_15.mp4">
                 </video>
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/real_16.mp4">
                 </video>
             </div>
             <div class="row">
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/real_17.mp4">
                 </video>
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/real_18.mp4">
                 </video>
             </div>
             <div class="row">
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/real_19.mp4">
                 </video>
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/real_20.mp4">
                 </video>
             </div>
             <div class="row">
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/real_23.mp4">
                 </video>
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/real_24.mp4">
                 </video>
             </div>
             <div class="row">
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/real_3.mp4">
                 </video>
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/real_21.mp4">
                 </video>
             </div>
@@ -291,34 +291,34 @@
                 <span style="width: 49%;">Prompt: Xxxxx xxxxx xxxxx xxx xxxx</span>
             </div>
             <div class="row">
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/text_1.mp4">
                 </video>
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/text_2.mp4">
                 </video>
             </div>
             <div class="row">
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/text_3.mp4">
                 </video>
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/text_4.mp4">
                 </video>
             </div>
             <div class="row">
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/text_5.mp4">
                 </video>
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/text_6.mp4">
                 </video>
             </div>
             <div class="row">
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/text_7.mp4">
                 </video>
-                <video style="width: 49%;" controls>
+                <video controls>
                     <source src="videos/text_8.mp4">
                 </video>
             </div>
