--- a/bailing_foley/index.html
+++ b/bailing_foley/index.html
@@ -79,28 +79,40 @@
                 <h3>Group 1 - Anime</h3>
             </div>
             <div class="row">
-                <video controls>
-                    <source src="videos/anime_1.mp4">
-                </video>
-                <video controls>
-                    <source src="videos/anime_2.mp4">
-                </video>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/anime_1.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/anime_2.mp4">
+                    </video>
+                </div>
             </div>
             <div class="row">
-                <video controls>
-                    <source src="videos/anime_3.mp4">
-                </video>
-                <video controls>
-                    <source src="videos/anime_4.mp4">
-                </video>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/anime_3.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/anime_4.mp4">
+                    </video>
+                </div>
             </div>
             <div class="row">
-                <video controls>
-                    <source src="videos/anime_5.mp4">
-                </video>
-                <video controls>
-                    <source src="videos/anime_6.mp4">
-                </video>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/anime_5.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/anime_6.mp4">
+                    </video>
+                </div>
             </div>
             <!--<div class="row">
                 <video controls>
@@ -147,7 +159,7 @@
                 </video>
             </div>-->
 
-            <div class="leftAlign">
+            <!--<div class="leftAlign">
                 <h3>Group 3 - Game</h3>
             </div>
             <div class="row">
@@ -321,7 +333,7 @@
                 <video controls>
                     <source src="videos/text_8.mp4">
                 </video>
-            </div>
+            </div>-->
         </article>
         
         <footer class="content">
