--- a/bailing_foley/index.html
+++ b/bailing_foley/index.html
@@ -79,40 +79,28 @@
                 <h3>Group 1 - Anime</h3>
             </div>
             <div class="row">
-                <div class="cell">
-                    <video controls>
-                        <source src="videos/anime_1.mp4">
-                    </video>
-                </div>
-                <div class="cell">
-                    <video controls>
-                        <source src="videos/anime_2.mp4">
-                    </video>
-                </div>
+                <video class="cell" controls>
+                    <source src="videos/anime_1.mp4">
+                </video>
+                <video class="cell" controls>
+                    <source src="videos/anime_2.mp4">
+                </video>
             </div>
             <div class="row">
-                <div class="cell">
-                    <video controls>
-                        <source src="videos/anime_3.mp4">
-                    </video>
-                </div>
-                <div class="cell">
-                    <video controls>
-                        <source src="videos/anime_4.mp4">
-                    </video>
-                </div>
+                <video class="cell" controls>
+                    <source src="videos/anime_3.mp4">
+                </video>
+                <video class="cell" controls>
+                    <source src="videos/anime_4.mp4">
+                </video>
             </div>
             <div class="row">
-                <div class="cell">
-                    <video controls>
-                        <source src="videos/anime_5.mp4">
-                    </video>
-                </div>
-                <div class="cell">
-                    <video controls>
-                        <source src="videos/anime_6.mp4">
-                    </video>
-                </div>
+                <video class="cell" controls>
+                    <source src="videos/anime_5.mp4">
+                </video>
+                <video class="cell" controls>
+                    <source src="videos/anime_6.mp4">
+                </video>
             </div>
             <!--<div class="row">
                 <video controls>
