--- a/bailing_foley/index.html
+++ b/bailing_foley/index.html
@@ -79,14 +79,18 @@
                 <h3>Group 1 - Anime</h3>
             </div>
             <div class="row">
-                <video class="cell" controls>
-                    <source src="videos/anime_1.mp4">
-                </video>
-                <video class="cell" controls>
-                    <source src="videos/anime_2.mp4">
-                </video>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/anime_1.mp4">
+                    </video>
+                <div class="cell">
+                </div class="cell">
+                    <video controls>
+                        <source src="videos/anime_2.mp4">
+                    </video>
+                </div>
             </div>
-            <div class="row">
+            <!--<div class="row">
                 <video class="cell" controls>
                     <source src="videos/anime_3.mp4">
                 </video>
@@ -102,7 +106,7 @@
                     <source src="videos/anime_6.mp4">
                 </video>
             </div>
-            <!--<div class="row">
+            <div class="row">
                 <video controls>
                     <source src="videos/anime_7.mp4">
                 </video>
@@ -111,7 +115,7 @@
                 </video>
             </div>-->
 
-            <div class="leftAlign">
+            <!--<div class="leftAlign">
                 <h3>Group 2 - AI Generated</h3>
             </div>
             <div class="row">
@@ -137,7 +141,7 @@
                 <video controls>
                     <source src="videos/generated_1.mp4">
                 </video>
-            </div>
+            </div>-->
             <!--<div class="row">
                 <video controls>
                     <source src="videos/generated_7.mp4">
