--- a/bailing_foley/index.html
+++ b/bailing_foley/index.html
@@ -80,14 +80,14 @@
             </div>
             <div class="row">
                 <div class="cell">
-                    <video controls>
+                    <!--<video controls>
                         <source src="videos/anime_1.mp4">
-                    </video>
+                    </video>-->
                 <div class="cell">
                 </div class="cell">
-                    <video controls>
+                    <!--<video controls>
                         <source src="videos/anime_2.mp4">
-                    </video>
+                    </video>-->
                 </div>
             </div>
             <!--<div class="row">
