--- a/bailing_foley/index.html
+++ b/bailing_foley/index.html
@@ -75,7 +75,7 @@
                 <h2>Gallery</h2>
             </div>
 
-            <div class="leftAlign">
+            <div class="leftAlign" style="background-color: blue;">
                 <h3>Group 1 - Anime</h3>
             </div>
             <div class="row">
