--- a/bailing_foley/index.html
+++ b/bailing_foley/index.html
@@ -80,11 +80,13 @@
             </div>
             <div class="row">
                 <div class="cell">
+                    左
                     <!--<video controls>
                         <source src="videos/anime_1.mp4">
                     </video>-->
                 <div class="cell">
                 </div class="cell">
+                    right
                     <!--<video controls>
                         <source src="videos/anime_2.mp4">
                     </video>-->
