--- a/bailing_foley/index.html
+++ b/bailing_foley/index.html
@@ -84,8 +84,8 @@
                     <!--<video controls>
                         <source src="videos/anime_1.mp4">
                     </video>-->
+                </div>
                 <div class="cell">
-                </div class="cell">
                     right
                     <!--<video controls>
                         <source src="videos/anime_2.mp4">
