--- a/bailing_foley/index.html
+++ b/bailing_foley/index.html
@@ -80,10 +80,9 @@
             </div>
             <div class="row">
                 <div class="cell">
-                    左
-                    <!--<video controls>
+                    <video controls>
                         <source src="videos/anime_1.mp4">
-                    </video>-->
+                    </video>
                 </div>
                 <div class="cell">
                     right
