--- a/bailing_foley/index.html
+++ b/bailing_foley/index.html
@@ -85,10 +85,9 @@
                     </video>
                 </div>
                 <div class="cell">
-                    right
-                    <!--<video controls>
+                    <video controls>
                         <source src="videos/anime_2.mp4">
-                    </video>-->
+                    </video>
                 </div>
             </div>
             <!--<div class="row">
