--- a/bailing_foley/index.html
+++ b/bailing_foley/index.html
@@ -90,30 +90,42 @@
                     </video>
                 </div>
             </div>
-            <!--<div class="row">
-                <video class="cell" controls>
-                    <source src="videos/anime_3.mp4">
-                </video>
-                <video class="cell" controls>
-                    <source src="videos/anime_4.mp4">
-                </video>
+            <div class="row">
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/anime_3.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/anime_4.mp4">
+                    </video>
+                </div>
             </div>
             <div class="row">
-                <video class="cell" controls>
-                    <source src="videos/anime_5.mp4">
-                </video>
-                <video class="cell" controls>
-                    <source src="videos/anime_6.mp4">
-                </video>
+                <div class="cell">
+                    <video class="cell" controls>
+                        <source src="videos/anime_5.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video class="cell" controls>
+                        <source src="videos/anime_6.mp4">
+                    </video>
+                </div>
             </div>
             <div class="row">
-                <video controls>
-                    <source src="videos/anime_7.mp4">
-                </video>
-                <video controls>
-                    <source src="videos/anime_8.mp4">
-                </video>
-            </div>-->
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/anime_7.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/anime_8.mp4">
+                    </video>
+                </div>
+            </div>
 
             <!--<div class="leftAlign">
                 <h3>Group 2 - AI Generated</h3>
