--- a/bailing_foley/index.html
+++ b/bailing_foley/index.html
@@ -127,40 +127,56 @@
                 </div>
             </div>
 
-            <!--<div class="leftAlign">
+            <div class="leftAlign">
                 <h3>Group 2 - AI Generated</h3>
             </div>
             <div class="row">
-                <video controls>
-                    <source src="videos/generated_6.mp4">
-                </video>
-                <video controls>
-                    <source src="videos/generated_2.mp4">
-                </video>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/generated_6.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/generated_2.mp4">
+                    </video>
+                </div>
             </div>
             <div class="row">
-                <video controls>
-                    <source src="videos/generated_3.mp4">
-                </video>
-                <video controls>
-                    <source src="videos/generated_4.mp4">
-                </video>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/generated_3.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/generated_4.mp4">
+                    </video>
+                </div>
             </div>
             <div class="row">
-                <video controls>
-                    <source src="videos/generated_5.mp4">
-                </video>
-                <video controls>
-                    <source src="videos/generated_1.mp4">
-                </video>
-            </div>-->
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/generated_5.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/generated_1.mp4">
+                    </video>
+                </div>
+            </div>
             <!--<div class="row">
-                <video controls>
-                    <source src="videos/generated_7.mp4">
-                </video>
-                <video controls>
-                    <source src="videos/generated_8.mp4">
-                </video>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/generated_7.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/generated_8.mp4">
+                    </video>
+                </div>
             </div>-->
 
             <!--<div class="leftAlign">
