--- a/bailing_foley/index.html
+++ b/bailing_foley/index.html
@@ -75,7 +75,7 @@
                 <h2>Gallery</h2>
             </div>
 
-            <div class="leftAlign" style="background-color: blue;">
+            <div class="leftAlign">
                 <h3>Group 1 - Anime</h3>
             </div>
             <div class="row">
@@ -179,43 +179,59 @@
                 </div>
             </div>-->
 
-            <!--<div class="leftAlign">
+            <div class="leftAlign">
                 <h3>Group 3 - Game</h3>
             </div>
             <div class="row">
-                <video controls>
-                    <source src="videos/game_1.mp4">
-                </video>
-                <video controls>
-                    <source src="videos/game_2.mp4">
-                </video>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/game_1.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/game_2.mp4">
+                    </video>
+                </div>
             </div>
             <div class="row">
-                <video controls>
-                    <source src="videos/game_3.mp4">
-                </video>
-                <video controls>
-                    <source src="videos/game_4.mp4">
-                </video>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/game_3.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/game_4.mp4">
+                    </video>
+                </div>
             </div>
             <div class="row">
-                <video controls>
-                    <source src="videos/game_5.mp4">
-                </video>
-                <video controls>
-                    <source src="videos/game_6.mp4">
-                </video>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/game_5.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/game_6.mp4">
+                    </video>
+                </div>
             </div>
             <div class="row">
-                <video controls>
-                    <source src="videos/game_7.mp4">
-                </video>
-                <video controls>
-                    <source src="videos/game_8.mp4">
-                </video>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/game_7.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/game_8.mp4">
+                    </video>
+                </div>
             </div>
 
-            <div class="leftAlign">
+            <!--<div class="leftAlign">
                 <h3>Group 4 - Real World</h3>
             </div>
             <div class="row">
