--- a/bailing_foley/index.html
+++ b/bailing_foley/index.html
@@ -230,105 +230,164 @@
                     </video>
                 </div>
             </div>
+            <div class="row">
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/game_9.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/game_10.mp4">
+                    </video>
+                </div>
+            </div>
 
-            <!--<div class="leftAlign">
+            <div class="leftAlign">
                 <h3>Group 4 - Real World</h3>
             </div>
             <div class="row">
-                <video controls>
-                    <source src="videos/real_1.mp4">
-                </video>
-                <video controls>
-                    <source src="videos/real_2.mp4">
-                </video>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/real_1.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/real_2.mp4">
+                    </video>
+                </div>
             </div>
             <div class="row">
-                <video controls>
-                    <source src="videos/real_22.mp4">
-                </video>
-                <video controls>
-                    <source src="videos/real_4.mp4">
-                </video>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/real_22.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/real_4.mp4">
+                    </video>
+                </div>
             </div>
             <div class="row">
-                <video controls>
-                    <source src="videos/real_5.mp4">
-                </video>
-                <video controls>
-                    <source src="videos/real_6.mp4">
-                </video>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/real_5.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/real_6.mp4">
+                    </video>
+                </div>
             </div>
             <div class="row">
-                <video controls>
-                    <source src="videos/real_7.mp4">
-                </video>
-                <video controls>
-                    <source src="videos/real_8.mp4">
-                </video>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/real_7.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/real_8.mp4">
+                    </video>
+                </div>
             </div>
             <div class="row">
-                <video controls>
-                    <source src="videos/real_9.mp4">
-                </video>
-                <video controls>
-                    <source src="videos/real_10.mp4">
-                </video>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/real_9.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/real_10.mp4">
+                    </video>
+                </div>
             </div>
             <div class="row">
-                <video controls>
-                    <source src="videos/real_11.mp4">
-                </video>
-                <video controls>
-                    <source src="videos/real_12.mp4">
-                </video>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/real_11.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/real_12.mp4">
+                    </video>
+                </div>
             </div>
             <div class="row">
-                <video controls>
-                    <source src="videos/real_13.mp4">
-                </video>
-                <video controls>
-                    <source src="videos/real_14.mp4">
-                </video>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/real_13.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/real_14.mp4">
+                    </video>
+                </div>
             </div>
             <div class="row">
-                <video controls>
-                    <source src="videos/real_15.mp4">
-                </video>
-                <video controls>
-                    <source src="videos/real_16.mp4">
-                </video>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/real_15.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/real_16.mp4">
+                    </video>
+                </div>
             </div>
             <div class="row">
-                <video controls>
-                    <source src="videos/real_17.mp4">
-                </video>
-                <video controls>
-                    <source src="videos/real_18.mp4">
-                </video>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/real_17.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/real_18.mp4">
+                    </video>
+                </div>
             </div>
             <div class="row">
-                <video controls>
-                    <source src="videos/real_19.mp4">
-                </video>
-                <video controls>
-                    <source src="videos/real_20.mp4">
-                </video>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/real_19.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/real_20.mp4">
+                    </video>
+                </div>
             </div>
             <div class="row">
-                <video controls>
-                    <source src="videos/real_23.mp4">
-                </video>
-                <video controls>
-                    <source src="videos/real_24.mp4">
-                </video>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/real_23.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/real_24.mp4">
+                    </video>
+                </div>
             </div>
             <div class="row">
-                <video controls>
-                    <source src="videos/real_3.mp4">
-                </video>
-                <video controls>
-                    <source src="videos/real_21.mp4">
-                </video>
+                    <video controls>
+                        <source src="videos/real_3.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/real_21.mp4">
+                    </video>
+                </div>
             </div>
         
             <div class="leftAlign">
@@ -339,37 +398,52 @@
                 <span style="width: 49%;">Prompt: Xxxxx xxxxx xxxxx xxx xxxx</span>
             </div>
             <div class="row">
-                <video controls>
-                    <source src="videos/text_1.mp4">
-                </video>
-                <video controls>
-                    <source src="videos/text_2.mp4">
-                </video>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/text_1.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/text_2.mp4">
+                    </video>
+                </div>
             </div>
             <div class="row">
-                <video controls>
-                    <source src="videos/text_3.mp4">
-                </video>
-                <video controls>
-                    <source src="videos/text_4.mp4">
-                </video>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/text_3.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/text_4.mp4">
+                    </video>
+                </div>
             </div>
             <div class="row">
-                <video controls>
-                    <source src="videos/text_5.mp4">
-                </video>
-                <video controls>
-                    <source src="videos/text_6.mp4">
-                </video>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/text_5.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/text_6.mp4">
+                    </video>
+                </div>
             </div>
             <div class="row">
-                <video controls>
-                    <source src="videos/text_7.mp4">
-                </video>
-                <video controls>
-                    <source src="videos/text_8.mp4">
-                </video>
-            </div>-->
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/text_7.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/text_8.mp4">
+                    </video>
+                </div>
         </article>
         
         <footer class="content">
