--- a/bailing_foley/index.html
+++ b/bailing_foley/index.html
@@ -379,6 +379,7 @@
                 </div>
             </div>
             <div class="row">
+                <div class="cell">
                     <video controls>
                         <source src="videos/real_3.mp4">
                     </video>
@@ -444,6 +445,7 @@
                         <source src="videos/text_8.mp4">
                     </video>
                 </div>
+            </div>
         </article>
         
         <footer class="content">
