--- a/bailing_foley/index.html
+++ b/bailing_foley/index.html
@@ -67,7 +67,9 @@
             <div style="text-align: center;">
                 <img class="img_illustration" src="images/method.png" alt="overview of Bailing-Foley">
             </div>
-            <p>Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx.</p>
+            <p>1. We propose a fine-grained, learnable Audio-Vision Aggregator (AVA), a dynamic connector that integrates high-resolution visual features with corresponding audio features across multiple stages.</p>
+            <p>2. We propose a multi-modal visual-audio chain-of-thought framework that leverages advanced audio generation techniques to produce high-quality audio in few-shot settings, optimized through reinforcement learning.</p>
+            <p>3. We developed an industry-standard video-to-audio dataset that encompasses a diverse array of real-world scenarios, including sound effects from movies, games, and advertisements.</p>
         </article>
 
         <article class="content">
