--- a/bailing_foley/index.html
+++ b/bailing_foley/index.html
@@ -11,65 +11,74 @@
             <div class="centerAlign">
                 <h1>Bailing-Foley: Video-Guided Sound Effects Generation with Multimodal Chain-of-Thoughts Controls</h1>
             </div>
-            <p id="authors" style="font-size: 16px;">
-                <span>Zihao Chen<sup>1</sup></span><span>,&nbsp;</span>
-                <span>Haomin Zhang<sup>2</sup></span><span>,&nbsp;</span>
-                <span>Xinhan Di<sup>1</sup></span><span>,&nbsp;</span>
-                <span>Haoyu Wang<sup>1, 2</sup></span><span>,&nbsp;</span>
-                <span>Sizhe Shan<sup>1, 2</sup></span><span>,&nbsp;</span>
-                <span>Junjie Zheng<sup>1</sup></span><span>,&nbsp;</span>
-                <span>Yunming Liang<sup>1</sup></span><span>,&nbsp;</span>
-                <span>Yihan Fan<sup>1, 3</sup></span><span>,&nbsp;</span>
-                <span>Yihua Wang<sup>1</sup></span><span>,&nbsp;</span>
-                <span>Chaofan Ding<sup>1</sup></span><span>&nbsp;and&nbsp;</span>
-                <span>Lei Xie<sup>4</sup></span>
-                <br>
-                <br>
-                <span><sup>1</sup>AI Lab, Giant Network</span>
-                <br>
-                <span><sup>2</sup>Zhejiang University</span>
-                <br>
-                <span><sup>3</sup>East China University of Science and Technology</span>
-                <br>
-                <span><sup>4</sup>Northwestern Polytechnical University</span>
-            </p>
-        
-            <p style="text-align: center;">
-                <a class="a_paper" href="https://arxiv.org/" target="_blank">[Paper]</a>
-                <a class="a_code" href="https://git.devcloud.ztgame.com/" target="_blank">[Code]</a>
-                <a class="a_video" href="https://www.youtube.com/" target="_blank">[YouTube]</a>
-            </p>
+            <div class="centerAlign">
+                <p>
+                    <span>Zihao Chen<sup>1</sup></span><span>,&nbsp;</span>
+                    <span>Haomin Zhang<sup>2</sup></span><span>,&nbsp;</span>
+                    <span>Xinhan Di<sup>1</sup></span><span>,&nbsp;</span>
+                    <span>Haoyu Wang<sup>1, 2</sup></span><span>,&nbsp;</span>
+                    <span>Sizhe Shan<sup>1, 2</sup></span><span>,&nbsp;</span>
+                    <span>Junjie Zheng<sup>1</sup></span><span>,&nbsp;</span>
+                    <span>Yunming Liang<sup>1</sup></span><span>,&nbsp;</span>
+                    <span>Yihan Fan<sup>1, 3</sup></span><span>,&nbsp;</span>
+                    <span>Yihua Wang<sup>1</sup></span><span>,&nbsp;</span>
+                    <span>Chaofan Ding<sup>1</sup></span><span>&nbsp;and&nbsp;</span>
+                    <span>Lei Xie<sup>4</sup></span>
+                    <br>
+                    <br>
+                    <span><sup>1</sup>AI Lab, Giant Network</span>
+                    <br>
+                    <span><sup>2</sup>Zhejiang University</span>
+                    <br>
+                    <span><sup>3</sup>East China University of Science and Technology</span>
+                    <br>
+                    <span><sup>4</sup>Northwestern Polytechnical University</span>
+                </p>
+            </div>
+            <div class="centerAlign">
+                <p>
+                    <a class="a_paper" href="https://arxiv.org/" target="_blank">[Paper]</a>
+                    <a class="a_code" href="https://git.devcloud.ztgame.com/" target="_blank">[Code]</a>
+                    <a class="a_video" href="https://www.youtube.com/" target="_blank">[YouTube]</a>
+                </p>
+            </div>
         </header>
         
         <article class="content">
             <div class="centerAlign">
                 <h2>Promotion Video</h2>
             </div>
-            <p>Bailing-Foley is xxxxx xxxxx xxxxx xxx xxxx.</p>
-            <div style="text-align: center;">
+            <div class="leftAlign">
+                <p>Bailing-Foley is xxxxx xxxxx xxxxx xxx xxxx.</p>
+            </div>
+            <div class="centerAlign">
                 <iframe style="height: 480px; width: 640px;" src="//player.bilibili.com/player.html?isOutside=true&aid=113503687934302&bvid=BV1z7UWYbE83&cid=26825328938&p=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
             </div>
             <br>
-            <div style="text-align: center;">Tips: Bailing-Foley is xxxxx xxxxx xxxxx xxx xxxx.</div>
+            <div class="leftAlign">
+                <p>Tips: Bailing-Foley is xxxxx xxxxx xxxxx xxx xxxx.</p>
+            </div>
         </article>
 
         <article class="content">
             <div class="centerAlign">
                 <h2>Abstract</h2>
             </div>
-            <p>Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx.</p>
+            <div class="leftAlign">
+                <p>Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx. Xxxxx xxxxx xxxxx xxx xxxx.</p>
+            </div>
         </article>
 
         <article class="content">
             <div class="centerAlign">
                 <h2>Method</h2>
             </div>
-            <div style="text-align: center;">
+            <div class="centerAlign">
                 <img class="img_illustration" src="images/method.png" alt="overview of Bailing-Foley">
             </div>
-            <p>1. We propose a fine-grained, learnable Audio-Vision Aggregator (AVA), a dynamic connector that integrates high-resolution visual features with corresponding audio features across multiple stages.</p>
-            <p>2. We propose a multi-modal visual-audio chain-of-thought framework that leverages advanced audio generation techniques to produce high-quality audio in few-shot settings, optimized through reinforcement learning.</p>
-            <p>3. We developed an industry-standard video-to-audio dataset that encompasses a diverse array of real-world scenarios, including sound effects from movies, games, and advertisements.</p>
+            <div class="leftAlign">
+                <p>1. We propose a fine-grained, learnable Audio-Vision Aggregator (AVA), a dynamic connector that integrates high-resolution visual features with corresponding audio features across multiple stages. 2. We propose a multi-modal visual-audio chain-of-thought framework that leverages advanced audio generation techniques to produce high-quality audio in few-shot settings, optimized through reinforcement learning. 3. We developed an industry-standard video-to-audio dataset that encompasses a diverse array of real-world scenarios, including sound effects from movies, games, and advertisements.</p>
+            </div>
         </article>
 
         <article class="content">
