--- a/bailing_foley/index.html
+++ b/bailing_foley/index.html
@@ -74,10 +74,38 @@
                 <h2>Method</h2>
             </div>
             <div class="centerAlign">
-                <img class="img_illustration" src="images/method.png" alt="overview of Bailing-Foley">
+                <img class="img_illustration" src="images/method.png" alt="Overview of Bailing-Foley">
+            </div>
+            <div class="centerAlign">
+                <p>Figure 1: Overview of Bailing-Foley.</p>
             </div>
             <div class="leftAlign">
                 <p>1. We propose a fine-grained, learnable Audio-Vision Aggregator (AVA), a dynamic connector that integrates high-resolution visual features with corresponding audio features across multiple stages. 2. We propose a multi-modal visual-audio chain-of-thought framework that leverages advanced audio generation techniques to produce high-quality audio in few-shot settings, optimized through reinforcement learning. 3. We developed an industry-standard video-to-audio dataset that encompasses a diverse array of real-world scenarios, including sound effects from movies, games, and advertisements.</p>
+            </div>
+        </article>
+
+        <article class="content">
+            <div class="centerAlign">
+                <h2></h2>
+            </div>
+            <div class="row">
+                <div class="cell">
+                    <img src="images/tac_balloon.png" alt="Balloon">
+                </div>
+                <div class="cell">
+                    <img src="images/tac_yellowdog.png" alt="Yellow Dog">
+                </div>
+            </div>
+            <div class="row">
+                <div class="cell">
+                    <img src="images/tac_lion.png" alt="Lion">
+                </div>
+                <div class="cell">
+                    <img src="images/tac_gun.png" alt="Gun">
+                </div>
+            </div>
+            <div class="centerAlign">
+                <p>Figure 2: Temporal Alignment Comparison.</p>
             </div>
         </article>
 
