--- a/bailing_foley/index.html
+++ b/bailing_foley/index.html
@@ -86,7 +86,7 @@
 
         <article class="content">
             <div class="centerAlign">
-                <h2></h2>
+                <h2>V2A Generation Results Visualization</h2>
             </div>
             <div class="row">
                 <div class="cell">
