--- a/bailing_foley/index.html
+++ b/bailing_foley/index.html
@@ -46,7 +46,7 @@
         
         <article class="content">
             <div class="centerAlign">
-                <h2>Promotion Video</h2>
+                <h2>Promotional Video</h2>
             </div>
             <div class="leftAlign">
                 <p>Bailing-Foley is xxxxx xxxxx xxxxx xxx xxxx.</p>
