--- a/bailing_foley/index.html
+++ b/bailing_foley/index.html
@@ -65,7 +65,7 @@
                 <h2>Abstract</h2>
             </div>
             <div class="leftAlign">
-                <p>Generating sound effects for videos requires creating industry-level sound effects that diverge significantly in order to produces high-quality audio generation in a few shot settings. To address this problem, we introduce Bailing-Foley, a foundation model designed for video-guided sound generation that supports high quality audio generation in a few shot setting. The foundation model is consisted with two modules. The first module is a conditional flow-matching transformers building a fine-grained, learnable Audio-Vision Aggregator (AVA), integrates high-resolution visual features with corresponding audio features across multiple stages. The second module is a multi-modal visual-audio chain-of-thought framework that leverages advanced audio generation techniques to produce high-quality audio in few-shot settings. Finally, an industry-standard video-to-audio dataset that encompasses a diverse array of real-world scenarios is built. Through both automated evaluations and human studies, we show that Bailing-Foley effectively generates synchronized, high-quality sounds across diverse conditional inputs, surpassing existing methods in performance.</p>
+                <p>Generating sound effects for videos requires creating industry-level sound effects that diverge significantly in order to produces high-quality audio generation in a few shot settings. To address this problem, we introduce Bailing-Foley, a foundation model designed for video-guided sound generation that supports high quality audio generation in a few shot setting. The foundation model is consisted with two modules. The first module is a <span style="font-weight: bold;">conditional flow-matching transformers building a fine-grained, learnable Audio-Vision Aggregator (AVA), integrates high-resolution visual features with corresponding audio features across multiple stages</span>. The second module is a <span style="font-weight: bold;">multi-modal visual-audio chain-of-thought framework that leverages advanced audio generation techniques to produce high-quality audio in few-shot settings</span>. Finally, <span style="font-weight: bold;">an industry-standard video-to-audio dataset</span> that encompasses a diverse array of real-world scenarios is built. Through both automated evaluations and human studies, we show that Bailing-Foley effectively generates synchronized, high-quality sounds across diverse conditional inputs, surpassing existing methods in performance.</p>
             </div>
         </article>
 
@@ -434,10 +434,6 @@
                 <h3>Group 5 - Longtime</h3>
             </div>
             <div class="row">
-                <span style="width: 49%;">Without Prompt</span>
-                <span style="width: 49%;">Prompt: Xxxxx xxxxx xxxxx xxx xxxx</span>
-            </div>
-            <div class="row">
                 <div class="cell">
                     <video controls>
                         <source src="videos/long_1.mp4">
@@ -478,54 +474,90 @@
                 <h3>Group 6 - Text Control</h3>
             </div>
             <div class="row">
-                <span style="width: 49%;">Without Prompt</span>
-                <span style="width: 49%;">Prompt: Xxxxx xxxxx xxxxx xxx xxxx</span>
-            </div>
-            <div class="row">
                 <div class="cell">
-                    <video controls>
-                        <source src="videos/text_1.mp4">
-                    </video>
+                    <span>Without Prompt</span>
                 </div>
                 <div class="cell">
-                    <video controls>
-                        <source src="videos/text_2.mp4">
-                    </video>
+                    <span>Prompt: motorcycle engine</span>
+                </div>
+                <div class="cell">
+                    <span>Prompt: car horn</span>
                 </div>
             </div>
             <div class="row">
                 <div class="cell">
                     <video controls>
-                        <source src="videos/text_3.mp4">
+                        <source src="videos/text_1_1.mp4">
                     </video>
                 </div>
                 <div class="cell">
                     <video controls>
-                        <source src="videos/text_4.mp4">
-                    </video>
-                </div>
-            </div>
-            <div class="row">
-                <div class="cell">
-                    <video controls>
-                        <source src="videos/text_5.mp4">
+                        <source src="videos/text_1_2.mp4">
                     </video>
                 </div>
                 <div class="cell">
                     <video controls>
-                        <source src="videos/text_6.mp4">
+                        <source src="videos/text_1_3.mp4">
                     </video>
                 </div>
             </div>
             <div class="row">
                 <div class="cell">
+                    <span>Without Prompt</span>
+                </div>
+                <div class="cell">
+                    <span>Prompt: birdsong</span>
+                </div>
+            </div>
+            <div class="row">
+                <div class="cell">
                     <video controls>
-                        <source src="videos/text_7.mp4">
+                        <source src="videos/text_2_1.mp4">
                     </video>
                 </div>
                 <div class="cell">
                     <video controls>
-                        <source src="videos/text_8.mp4">
+                        <source src="videos/text_2_2.mp4">
+                    </video>
+                </div>
+            </div>
+            <div class="row">
+                <div class="cell">
+                    <span>Without Prompt</span>
+                </div>
+                <div class="cell">
+                    <span>Prompt: thunder</span>
+                </div>
+            </div>
+            <div class="row">
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/text_3_1.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/text_3_2.mp4">
+                    </video>
+                </div>
+            </div>
+            <div class="row">
+                <div class="cell">
+                    <span>Without Prompt</span>
+                </div>
+                <div class="cell">
+                    <span>Prompt: subway driving</span>
+                </div>
+            </div>
+            <div class="row">
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/text_4_1.mp4">
+                    </video>
+                </div>
+                <div class="cell">
+                    <video controls>
+                        <source src="videos/text_4_2.mp4">
                     </video>
                 </div>
             </div>
